<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Cipher Tool</string>
    <string name="textToDecode">Text to decode</string>
    <string name="decode">Decode</string>
    <string name="caesarOutputDescription">Caesar shift by 1, 2, 3 ... in selected direction</string>
    <string name="encode">Encode</string>
    <string name="textToEncode">Text to encode</string>
    <string name="morseDot">.</string>
    <string name="morseDash">-</string>
    <string name="switched">Switched</string>
    <string name="reversedSwitched">Reversed switched</string>
    <string name="reversed">Reversed</string>
    <string name="normal">Normal</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="password">Password</string>
    <string name="aIsOne">A=1</string>
    <string name="aIsZero">A=0</string>
    <string name="letterA">A</string>
    <string name="letterB">B</string>
    <string name="letterC">C</string>
    <string name="letterD">D</string>
    <string name="letterE">E</string>
    <string name="letterF">F</string>
    <string name="letterG">G</string>
    <string name="letterH">H</string>
    <string name="letterI">I</string>
    <string name="letterJ">J</string>
    <string name="letterK">K</string>
    <string name="letterL">L</string>
    <string name="letterM">M</string>
    <string name="letterN">N</string>
    <string name="letterO">O</string>
    <string name="letterP">P</string>
    <string name="letterQ">Q</string>
    <string name="letterR">R</string>
    <string name="letterS">S</string>
    <string name="letterT">T</string>
    <string name="letterU">U</string>
    <string name="letterV">V</string>
    <string name="letterW">W</string>
    <string name="letterX">X</string>
    <string name="letterY">Y</string>
    <string name="letterZ">Z</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="caesarToolName">Caesar</string>
    <string name="caesarSingleToolName">Caesar Single</string>
    <string name="wordSumToolName">Word Sum</string>
    <string name="vigenereToolName">Vigenere</string>
    <string name="autoclaveToolName">Autoclave</string>
    <string name="letterSumToolName">Letter Sum</string>
    <string name="letterNumberSumToolName">Letter Number Sum</string>
    <string name="numberSumToolName">Number Sum</string>
    <string name="numberLetterSumToolName">Number Letter Sum</string>
    <string name="brailToolName">Brail</string>
    <string name="morseToolName">Morse</string>
</resources>
