<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brailToolLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/dotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/morseDot"
        android:textSize="50sp" />

    <Button
        android:id="@+id/dashButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/dotButton"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/morseDash"
        android:textSize="50sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/outputText"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/dashButton"
        android:text="@string/reset" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dashButton"
        android:layout_alignBottom="@+id/dashButton"
        android:layout_alignLeft="@+id/resetButton"
        android:text="@string/next" />

    <EditText
        android:id="@+id/outputText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dotButton"
        android:layout_marginTop="26dp"
        android:editable="false"
        android:textSize="30sp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/normalOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/normalOutput"
        android:text="@string/switched"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/switchedOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reversedOutput"
        android:text="@string/reversedSwitched"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ReversedSwitchedOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView02"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/switchedOutput"
        android:text="@string/reversed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/reversedOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView03"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/outputText"
        android:text="@string/normal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>