<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wordSumToolLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/inputLabel"
        android:typeface="monospace">

        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroupCaesar"
        android:editable="false"
        android:inputType="none"
        android:minLines="1"
        android:scrollHorizontally="true"
        android:typeface="monospace"/>

    <TextView
        android:id="@+id/inputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/textToDecode"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <EditText
        android:id="@+id/paswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView01"
        android:typeface="monospace"/>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputText"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <RadioGroup
        android:id="@+id/radioGroupCaesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/decodeButton"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/encodeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/encode"/>

        <RadioButton
            android:id="@+id/decodeRadio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="true"
            android:text="@string/decode"/>
    </RadioGroup>

    <Button
        android:id="@+id/decodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/paswordText"
        android:text="@string/decode"/>

    <CheckBox
        android:id="@+id/aIndexCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/outputText"
        android:layout_toRightOf="@+id/radioGroupCaesar"
        android:checked="true"
        android:text="@string/aIsOne"/>
</RelativeLayout>
